--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<Button id="ConnectBtn">
 			<h1 id="ConnectText">Connect Wires</h1>
 			</Button>
+	  <Button id="BatteryBtn">
+			<h1 id="BatteryText">Connect Wires</h1>
+			</Button>
 		<b><p id="wireDisplay">Wires: <span id="wireCount">0/0</span></p></b>
     <div id="Log">
       <h4 id="StoryLog"></h4>
