--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<h1 id="ConnectText">Connect Wires</h1>
 			</Button>
 	  <Button id="BatteryBtn">
-			<h1 id="BatteryText">Connect Wires</h1>
+			<h1 id="BatteryText">Connect Battery</h1>
 			</Button>
 		<b><p id="wireDisplay">Wires: <span id="wireCount">0/0</span></p></b>
     <div id="Log">
