--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="interface.css" />
-</style>
 </head>
 
   <body>
@@ -16,6 +15,9 @@
 	  <Button id="BatteryBtn">
 			<h1 id="BatteryText">Connect Battery</h1>
 			</Button>
+		<div class="progress">
+			<div id="Act" class="bar"></div>
+		</div>
 		<b><p id="wireDisplay">Wires: <span id="wireCount">0/0</span></p></b>
     <div id="Log">
       <h4 id="StoryLog"></h4>
