--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 	  <Button id="BatteryBtn">
 			<h1 id="BatteryText">Connect Battery</h1>
 			</Button>
-		<div class="progress">
-			<div id="Act" class="bar"></div>
-		</div>
-		<b><p id="wireDisplay">Wires: <span id="wireCount">0/0</span></p></b>
-    <div id="Log">
-      <h4 id="StoryLog"></h4>
-    </div>
+      <div class="progress">
+          <div id="Act" class="bar"></div>
+      </div>
+      <div class="Log">
+          <h4 id="StoryLog"></h4>
+          </div>
+          <div class="items">
+              <b><p id="wireDisplay">Wires: <span id="wireCount">0/0</span></p></b>
+          </div>
 </body>
 
   <script type="text/javascript" src="main.js"></script>
-
   </html>
