--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
           <h4 id="StoryLog"></h4>
           </div>
           <div class="items">
-              <b><p id="wireDisplay">Wires: <span id="wireCount">0/0</span></p></b>
+              <b><p class="left"  id="wireDisplay">Wires: <span id="wireCount">0/0</span></p>
+                  <p class="right" id="batteryDisplay">Batteries: <span id="batteryCount">0/0</span></p>
+              </b>
           </div>
 </body>
 
